feat(course-spaces): add edit button and create structure to support it. Still issues while persisting data.
